# R-SODIUM-Ultra-Enclosure-Manager

./: .gitignore  README.md  Ui_ultra_enclosure_manager.py  Ui_ultra_ssdbox_manager.py  enclosure_mode_handle.py  groupboxcontroller.py  instance_check.py  interface.py  logo  main.py  main_windows.py  nuitka-crash-report.xml  nuitka.bat  progressbar.py  pyproject.toml  qt6_main_interface.py  r-sodium-ultra-enclosure-manager.iss  reset.py  sata_handle.py  test1.py  test2.py  ultra_enclosure_manager.ui  ultra_ssdbox_manager.ui  update_checker.py  usb_module.py  usb_monitor.py  usm.qrc  usm_rc.py
